# final-year-project

./: .gitignore  FINAL_YEAR_PROJECT_REPORT.md  README.md  STREAMING_UPGRADE.md  package-lock.json
backend/: main.py  mock_server.js  pyproject.toml  test_start_stream.py
backend/backend.egg-info/: PKG-INFO  requires.txt
backend/streams/stream_30352b0d/: playlist.m3u8  segment000.ts  segment001.ts
backend/streams/stream_354a7c9b/: playlist.m3u8  test_segment.ts
backend/streams/stream_3c63f571/: playlist.m3u8  segment000.ts
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/reports/: page.tsx
frontend/app/students/: page.tsx
frontend/components/: attendance-table.tsx  camera-feed.tsx  face-registration-dialog.tsx  navigation.tsx  stats-cards.tsx
frontend/hooks/: use-face-detection.ts
frontend/lib/: api.ts  stream-manager.ts  stream-test.ts
scripts/: 001_create_tables.sql
